# youtube-script

./: .gitignore  API_CLIENT_ERROR.txt  anime_indexer.py  data_processor.py  db_handler.py  error_solver.py  main.py  mal_script.py  pyproject.toml  review_scraper.py  tables.sql  utils.py
