[project]
name = "youtube-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.0",
    "aiosqlite>=0.21.0",
    "bs4>=0.0.2",
    "colorama>=0.4.6",
    "langdetect>=1.0.9",
    "lxml>=6.0.2",
    "nltk>=3.9.2",
    "panda>=0.3.1",
    "pytest-playwright>=0.7.1",
    "requests>=2.32.5",
]
